--- a/03-lection1/02-accordion/index.html
+++ b/03-lection1/02-accordion/index.html
@@ -6,13 +6,33 @@
         <link rel="stylesheet" href="./accordion.css">
     </head>
     <body>
-        <details>
-            <summary>
-                Accordion item
-            </summary>
-            <p>
-                Hidden content
-            </p>
-        </details>
+        <div class="accordion">
+            <details class="accordion__item">
+                <summary class="accordion__summary">
+                    Accordion item 1
+                </summary>
+                <p class="accordion__content">
+                    Ура! Из пластелина, я вылепил КОТА. Прекрасно, молодчина! Какая красота! Как правильно! Как тонко! Хвалил меня отец. Какого ПОРОСЁНКА, слепил ты - молодец!
+                </p>
+            </details>
+
+            <details class="accordion__item">
+                <summary class="accordion__summary">
+                    Accordion item 2
+                </summary>
+                <p class="accordion__content">
+                    Ура! Из пластелина, я вылепил КОТА. Прекрасно, молодчина! Какая красота! Как правильно! Как тонко! Хвалил меня отец. Какого ПОРОСЁНКА, слепил ты - молодец!
+                </p>
+            </details>
+
+            <details class="accordion__item">
+                <summary class="accordion__summary">
+                    Accordion item 3
+                </summary>
+                <p class="accordion__content">
+                    Ура! Из пластелина, я вылепил КОТА. Прекрасно, молодчина! Какая красота! Как правильно! Как тонко! Хвалил меня отец. Какого ПОРОСЁНКА, слепил ты - молодец!
+                </p>
+            </details>
+        </div>
     </body>
 </html>
